--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -33,8 +33,8 @@ $primary-color: red;
     text-align: center;
     text-decoration: none;
     transition: background-color 0.3s ease;
-   
     margin: 4px 4px 4px 4px;
+    @include center;
 }
 
 .button:hover {
@@ -49,7 +49,5 @@ $primary-color: red;
 }
 
 .start-game{
-    .button-start{
     @include center;
-}
 }
