--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,3 +1,17 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
 .pagina {
   display: flex;
   flex-direction: column;
@@ -15,13 +29,13 @@
 }
 
 .boven_links img {
-  height: 450px;
+  height: 490px;
 }
 
 .boven_rechts { 
-  padding-left: 100px;
-  padding-right: 100px;
-  padding-top: 80px;
+  padding-left: 50px;
+  padding-right: 70px;
+  padding-top: 115px;
   height: 100%;
   width: 44%;
 }
@@ -76,7 +90,8 @@ button:hover {
 
 .onder_links {
   padding-left: 50px;
-  padding-top: 100px;
+  padding-right: 40px;
+  padding-top: 130px;
 }
 
 .onder_links button {
