--- a/src/style/Pokemon.css
+++ b/src/style/Pokemon.css
@@ -11,6 +11,10 @@
   box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
 }
 
+.pokemon-card.selected {
+  outline: 2px solid red;
+}
+
 .pokemon-card .sprite {
   width: 95%;
   /* max-height: 90%; */
