--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -2,6 +2,184 @@
 
 $primary-color: red;
 
+.navbar a {
+    text-decoration: none;
+    color: black;
+}
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    background-color: red;
+    height: 48px;
+    width: 100%;
+}
+
+.navlinks {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 40%;
+}
+
+.navlinks {
+    margin-left: 30px;
+}
+
+.navrechts {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    height: 100%;
+    width: 60%;
+}
+
+body {
+    // background-color: #cccccc;  
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.pagina {
+    display: flex;
+    flex-direction: column;
+}
+
+.boven {
+    display: flex;
+    flex-direction: row;
+}
+
+.boven_links {
+    display: flex;
+    height: 100%;
+    width: 56%;
+}
+
+.boven_links img {
+    height: 490px;
+}
+
+.boven_rechts { 
+    padding-left: 50px;
+    padding-right: 70px;
+    padding-top: 115px;
+    height: 100%;
+    width: 44%;
+}
+
+.midden {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    height: auto;
+    max-width: 100%;
+}
+
+.midden_uitleg {
+    padding-left: 50px;
+    padding-right: 20px;
+    height: 100%;
+    width: 60%;
+}
+
+.midden_buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
+    padding-right: 40px;
+    width: 40%;
+}
+
+button {
+    background-color: red;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    margin: 4px 4px 4px 4px;
+}
+
+button:hover {
+    background-color: #cc0000;
+}/*# sourceMappingURL=App.css.map */
+
+.onder {
+    display: flex;
+    flex-direction: row;
+    padding-top: 50px;
+}
+
+.onder_links {
+    padding-left: 50px;
+    padding-right: 40px;
+    padding-top: 130px;
+}
+
+.onder_links button {
+    margin-top: 10px;
+    margin-left: 0px;
+}
+
+.battle-img {
+    min-height: calc(100vh - 8px);
+    background-image: url("../images/pokemonbattlepage.jpg");
+    background-size: cover;
+}
+
+.pokemon-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 190px;
+    height: 250px;
+    /* height: auto; */
+    background-color: rgba(50, 50, 50, 0.05);
+    border-radius: 20px;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+}
+  
+.pokemon-card.selected {
+    outline: 2px solid red;
+}
+  
+.pokemon-card .sprite {
+    width: 95%;
+    /* max-height: 90%; */
+}
 
 .pokemon {
     background-color: #f2f2f2;
@@ -83,3 +261,46 @@ $primary-color: red;
     position: relative;
     top: -55px;
 }
+
+.pagina {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: calc(100vh - 48px);
+  }
+  
+  .pagina * {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .left {
+    width: 50%;
+    background-color: beige;
+  }
+  
+  .game {
+    width: 100%;
+    height: 50%;
+    background-color: cornflowerblue;
+  }
+  
+  .buttons {
+    width: 100%;
+    height: 50%;
+    background-color: yellow;
+  }
+  
+  .button-player-one{
+      width: 135px;
+      background-color: #fff;
+  }
+  .button-player-two{
+  
+  }
+  
+  .right {
+    width: 50%;
+    height: 100%;
+    background-color: plum;
+  }
