--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -297,40 +297,43 @@ code {
     padding: 0;
 }
 
-.left {
+.left{
     width: 50%;
     background-color: beige;
-}
-
-.game {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50%;
-    background-color: cornflowerblue;
-}
-
-.game .p1 {
-
-}
-
-.buttonplayer-one{
-    width: 135px;
-    background-color: #fff;
-}
-.button-player-two{
-width: 135px;
-    background-color: #fff;
-}
-  
-.right {
-    width: 50%;
-    height: 100%;
-    background-color: plum;
+    .game{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 50%;
+        background-color: cornflowerblue;
+        background-image: url("../images/pokemonbattle.jpg");
+        background-size: cover;
+        .p1 {
+            .player1{
+                display: flex;
+                padding-top: 125px;
+                padding-right: 100px;
+            }
+            .player2{
+                display: flex;
+                padding-bottom: 125px;
+                padding-left: 100px;
+            }
+        }
+        
+    }
 }
 
 .right{
+    width: 50%;
+    height: 100%;
+    .info{
+        border: 1px solid gray;
+        border-radius: 8px;
+        margin: 5px;
+        margin-bottom: 10px;
+    }
     .attack-info{
         border: 1px solid gray;
         border-radius: 8px;
