--- a/src/style/App.css
+++ b/src/style/App.css
@@ -192,10 +192,10 @@ code {
 
 .buttons {
   width: 100%;
-  height: 50%;
-  background-color: yellow;
+  height: 30%;
 }
-.buttons .button-attack {
+.buttons .button-attackp1 {
+  width: 20%;
   background-color: red;
   border: none;
   border-radius: 5px;
@@ -208,10 +208,15 @@ code {
   transition: background-color 0.3s ease;
   margin: 4px 4px 4px 4px;
 }
-.buttons .button-attack:active {
+.buttons .button-attackp1:active {
   background-color: #cc0000;
 }
+.buttons .button-attackp1:disabled {
+  background-color: #660000;
+  cursor: default;
+}
 .buttons .button-attackp2 {
+  width: 20%;
   background-color: rgb(0, 0, 255);
   border: none;
   border-radius: 5px;
@@ -226,6 +231,10 @@ code {
 }
 .buttons .button-attackp2:active {
   background-color: #0000cc;
+}
+.buttons .button-attackp2:disabled {
+  background-color: #000066;
+  cursor: default;
 }
 
 .pokemon-battles {
@@ -288,42 +297,56 @@ code {
 }
 
 .left {
-  width: 50%;
-  background-color: beige;
+  width: 70%;
 }
 .left .game {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50%;
+  height: 70%;
   background-color: cornflowerblue;
   background-image: url("../images/pokemonbattle.jpg");
   background-size: cover;
+  font-weight: 600;
+  font-size: x-large;
+  color: black;
+  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+.left .game .p1 {
+  padding-top: 250px;
+  padding-right: 250px;
 }
 .left .game .p1 .player1 {
   display: flex;
-  padding-top: 125px;
-  padding-right: 100px;
+  width: 150px;
 }
-.left .game .p1 .player2 {
-  display: flex;
-  padding-bottom: 125px;
+.left .game .p1 .player1.dead {
+  transform: rotate(-90deg);
+}
+.left .game .p2 {
+  padding-bottom: 50px;
   padding-left: 100px;
+}
+.left .game .p2 .player2 {
+  display: flex;
+  width: 150px;
+}
+.left .game .p2 .player2.dead {
+  transform: rotate(90deg);
 }
 
 .right {
-  width: 50%;
+  width: 30%;
   height: 100%;
 }
 .right .info {
-  border: 1px solid gray;
-  border-radius: 8px;
-  margin: 5px;
-  margin-bottom: 10px;
+  border-bottom: 25px solid rgba(128, 128, 128, 0.477);
+  padding: 10px;
 }
 .right .attack-info {
-  border: 1px solid gray;
-  border-radius: 8px;
-  margin: 5px;
+  border-bottom: 25px solid rgba(128, 128, 128, 0.477);
+  padding: 10px;
 }/*# sourceMappingURL=App.css.map */
